--- a/css/style.css
+++ b/css/style.css
@@ -2,19 +2,6 @@
     margin: 0;
     padding: 0;
 }
-/* .nav-bar a{
-    color: #F39ABD;
-    font-family: Roboto,monospace;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 20px;
-    padding: 0px 5px 0px 5px;
-    list-style: none;
-} */
-
-.page{
-    background-color: #ffffff;
-}
 
 .nav-bar{
     margin-left: 280px;
@@ -89,10 +76,10 @@
 }
 
 .specials{
-    background-image: url("/images/Baked\ glazed\ donuts\ with\ whipped\ cream\ filling.jpg");
+    background-image: url("/images/Christmas\ Cookie\ Collection.jpg");
     margin-top: 1px;
     width: 100%;
-    height: 300px;
+    height: 350px;
 }
 
 .dark-screen{
@@ -103,53 +90,48 @@
 
 .specials div{
     position: absolute;
-    left: 405px;
-    top: 513px;
+    left: 385px;
+    top: 553px;
 
-    font-family: "Josefin Slab";
+    font-family: "Josefin Slab", monospace;
     font-style: normal;
     font-weight: 700;
-    font-size: 70px;
+    font-size: 80px;
     text-align: center;
 
     color: #FFFFFF;
 }
 
-.special-pink-line-1{
-    position: absolute;
-    width: 400px;
-    height: 1px;
-    left: 0px;
-    top: 550px;
-    background: rgba(243, 154, 189, 0.7);
+.special-pink-line{
+    margin: 10px 0px;
+    height: 3px;
+    background: #FFFFFF;
     border: none;
 }
-.special-pink-line-2{
-    position: absolute;
-    width: 400px;
-    height: 1px;
-    margin-left: 946px;
-    top: 550px;
-    background: rgba(243, 154, 189, 0.7);
-    border: none;
-}
+/* 
 #specials-decoration-1 {
-    /* position: absolute;
+    position: absolute;
     width: 194.39px;
     height: 142.32px;
     left: 438.55px;
     top: 648.17px;
- */
+
     
     transform: rotate(-137.6deg);
-}
+} */
 .row-of-specials{
-    width: 150%;
-    margin-top: -15px;
+    width: 100%;
+    margin-top: -18px;
+    background-color: black;
 }
+
+.row-of-specials section{
+    margin-left: 20px;
+}
+
 .row-of-specials img{
-    padding: 20px 2px;
-    height: 300px; 
+    padding: 5px 1px;
+    height: 200px; 
 }
 
 .donutty-delight{
@@ -163,11 +145,11 @@
     color: #F39ABD;
     position: absolute;
     left: 20px;
-    top: 1116.21px;
+    top: 1016.21px;
     font-family: "Sacramento";
     font-weight: 400;
     font-style: italic;
-    font-size: 80px;
+    font-size: 100px;
     margin-left: 100px;
 }
 
@@ -185,13 +167,17 @@ footer{
     margin-top: 25px;
 }
 
-.things-we-do-header{
+.things-we-do-header a{
     margin-top: 20px;
     margin-left: 70px;
     color: #F39ABD;
     font: Roboto,monospace;
     font-size: 15px;
+    cursor: pointer;
+}
 
+.things-we-do-header a:hover{
+    color:pink;
 }
 
 .things-we-can-do{
@@ -244,7 +230,7 @@ footer{
 
 .contact-us-header div{
     margin-top: 10px;
-    margin-left: -5px;
+    margin-left: -1px;
 }
 
 .fa{
@@ -254,7 +240,7 @@ footer{
 
 .fa div{
     margin-top: 1px;
-    padding-left: 10px;
+    padding-left: 5px;
     display: inline-flex;
 }
 
@@ -285,12 +271,15 @@ footer{
 
 .about-us{
     margin-top: 12px;
-    width: 150px;
+    width: 180px;
     height: 100px;
-    color: white;
 }
 .about-us div{
     margin-left: 0px;
-    padding-bottom: 10px;
+    margin-top: 12px;
+    
 }
 
+.about-us div a{
+    color: white;
+}
