changed most px to rem to test responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -4,25 +4,25 @@
 }
 
 .nav-bar{
-    margin-left: 280px;
-    margin-top: -20px;
+    margin-left: 17.5rem;
+    margin-top: -1.25rem;
 }
 
 .nav-bar img{
-    margin-top: -83px;
-    height: 120px;
+    margin-top: -5.188rem;
+    height: 7.5rem;
     border-radius: 50%;
 }
 
 .nav-bar ul{
     display: inline-flex;
-    margin: 100px;
+    margin: 6.25rem;
 }
 
 
 .nav-bar ul li{
     list-style-type: none;
-    margin: 10px 10px;
+    margin: 0.625rem 0.625rem;
 }
 
 
@@ -33,7 +33,7 @@
     font: Roboto,monospace;
     font-style: normal;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 1.125rem;
     cursor: pointer;
 }
 
@@ -42,7 +42,7 @@
 }
 .pink-line-header{
     width: 100%;
-    margin-top: -125px;
+    margin-top: -7.813rem;
     height: 1px;
     background-color:  #F39ABD;
     border: none;
@@ -59,18 +59,18 @@
 .header{
     background-image: url('/images/Soft\ &\ Moist\ Funfetti\ Cake\ _\ Butternut\ Bakery.jpg');
     margin-top: 1px;
-    width: 100%;
-    height: 300px;
+    width: 84.21rem;
+    height: 18.75rem;
 }
 .sugary-delight{
     background-color: #F39ABD; opacity: 0.8;
     margin-left: 17.5%;
     height: 100%;
-    width: 368px;
+    width: 23rem;
 }
 .sugary-delight-texts{
-    padding: 15px;
-    font-size: 90px;
+    padding: 0.938rem;
+    font-size: 5.625rem;
     font-family: "Josefine Slab",monospace;
     text-align: center;
 }
@@ -78,33 +78,33 @@
 .specials{
     background-image: url("/images/Christmas\ Cookie\ Collection.jpg");
     margin-top: 1px;
-    width: 100%;
-    height: 350px;
+    width: 84.21rem;
+    height: 21.875rem;
 }
 
 .dark-screen{
-    width: 100%;
+    width: 84.21rem;
     height: 100%;
     background-color: #000; opacity: 0.5;
 }
 
 .specials div{
     position: absolute;
-    left: 385px;
-    top: 553px;
+    left: 24.063rem;
+    top: 34.563rem;
 
     font-family: "Josefin Slab", monospace;
     font-style: normal;
     font-weight: 700;
-    font-size: 80px;
+    font-size: 5rem;
     text-align: center;
 
     color: #FFFFFF;
 }
 
 .special-pink-line{
-    margin: 10px 0px;
-    height: 3px;
+    margin: 0.625rem 0px;
+    height: 0.188rem;
     background: #FFFFFF;
     border: none;
 }
@@ -120,42 +120,43 @@
     transform: rotate(-137.6deg);
 } */
 .row-of-specials{
-    width: 100%;
-    margin-top: -18px;
+    width: 84.21rem;
+    margin-top: -1.125rem;
     background-color: black;
 }
 
 .row-of-specials section{
-    margin-left: 20px;
+    margin-left: 1.25rem;
 }
 
 .row-of-specials img{
-    padding: 5px 1px;
-    height: 200px; 
+    padding: 0.313rem 0.063rem;
+    height: 12.5rem; 
 }
 
 .donutty-delight{
-    width: 100%;
+    width: 84.21rem;
     background-image: url("/images/Chocolate\ glazed\ donut.jpg");
-    height: 400px;
+    height: 25rem;
+    margin-top: -0.188rem;
 }
 
 .donutty-delight h2{
     transform: rotate(-25.47deg);
     color: #F39ABD;
     position: absolute;
-    left: 20px;
-    top: 1016.21px;
+    left: 1.25rem;
+    top: 63.513rem;
     font-family: "Sacramento";
     font-weight: 400;
     font-style: italic;
-    font-size: 100px;
-    margin-left: 100px;
+    font-size: 6.25rem;
+    margin-left: 6.25rem;
 }
 
 footer{
     background-color: #62615D;
-    width: 100%;
+    width: 84.21rem;
     height: 190px;
 }
 
