--- a/css/about.css
+++ b/css/about.css
@@ -1,69 +1,69 @@
-.about-us{
+.aboutus{
     margin-top: 1px;
     background: #62615D;
-    width: 100%;
+    width: 84.21rem;
     height: auto;
 }
 
-.about-us header{
-    margin-left: 100px;
+.aboutus header{
+    margin-left: 6.25rem;
     display: inline-flex;
 }
-.about-us img{
-    margin-top: 70px;
-    margin-left: 200px;
-    width: 151px;
-    height: 149px;
-    border-radius: 100px;
+.aboutus img{
+    margin-top: 4.375rem;
+    margin-left: 12.5rem;
+    width: 9.44rem;
+    height: 9.313rem;
+    border-radius: 6.25rem;
 }
 #about-header-text{
-    margin-top: 40px;
-    margin-left: 200px;
+    margin-top: 2.5rem;
+    margin-left: 12.5rem;
     font-family: Asap, Roboto;
     font-style: italic;
     font-weight: 500;
-    font-size: 60px;
+    font-size: 3.75rem;
     text-decoration: underline;
     color: white;
 }
 .about-text{
-    width: 700px;
-    height: 280px;
-    margin-left: 500px;
-    margin-top: -100px;
+    width: 43.75rem;
+    height: 17.5rem;
+    margin-left: 31.25rem;
+    margin-top: -6.25rem;
     font-family: Asap, Roboto;
     font-style: normal;
-    font-size: 16px;
+    font-size: 1rem;
     color: white;
 }
 .other-things-we-do{
     background-color: white;
-    margin-left: 350px;
-    margin-top: 20px;
+    margin-left: 21.875rem;
+    margin-top: 1.25rem;
 }
 
 .other-things-we-do div{
     font-family: Asap;
     font-style: italic;
     font-weight: 700;
-    font-size: 35px;
+    font-size: 2.188rem;
     color: #62615D;
+    width: 17.5rem;
 }
 .card-grid{
     display: grid;
     grid-template-columns: 30% 30%;
+    column-gap: 20rem;
+    width: 12.5rem;
 }
 .card{
-    width: 270px;
-    height: 400px;
+    width: 16.88rem;
+    height: 25rem;
     background: #FFFFFF;
     box-shadow: 3px 4px 15px 1px rgba(0, 0, 0, 0.25);
-    margin-top: 20px;
-    border-radius: 20px;
+    margin-top: 1.25rem;
+    border-radius: 1.25rem;
 
-}
-.left{
-    margin-left: 90px;
 }
 .card img{
     border-radius: 20px 20px 0px 0px;
@@ -72,44 +72,45 @@
 .card-text-header-events{
     font-family: Asap;
     font-style: italic;
-    font-weight: 500;
-    font-size: 28px;
-    margin-left: 30px;
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-left: 1.875rem;
     color: #62615D;
 }
 .card-text-header-vire{
     font-family: Asap;
     font-style: italic;
-    font-weight: 500;
-    font-size: 28px;
+    font-weight: 600;
+    font-size: 1.75rem;
     text-align: center;
     color: #62615D;
 }
 
 .card-text{
-    margin-top: 5px;
-    padding: 3px;
+    margin-top: 0.313rem;
+    padding: 0.188rem;
     font-family: Asap;
     font-style: normal;
     font-weight: normal;
-    font-size: 15px;
+    font-size: 0.9375rem;
     text-align: center;
 }
 
 .mail-us{
-    background: rgba(243, 154, 189, 0.9);
-    margin-top: 20px;
+    background: rgba(243, 154, 189, 0.8);
+    margin-top: 1.25rem;
+    width: 84.21rem; ;
 }
 
 .mail-us div{
-    margin-left: 350px;
+    margin-left: 21.875rem;
 }
 .mail-us p{
-    padding: 5px;
+    padding: 0.3125rem;
     font-family: Asap;
     font-style: italic;
     font-weight: 700;
-    font-size: 25px;
+    font-size: 1.5625rem;
     color:black;
 }
 
@@ -117,13 +118,13 @@
     font-family: Asap;
     font-style: normal;
     font-weight: 300;
-    font-size: 15px;
-    padding-left: 10px;
+    font-size: 0.9375rem;
+    padding-left: 0.625rem;
     border: none;
-    width: 400px;
-    height: 30px;
-    border-radius: 5px;
-    margin-top: 5px;
+    width: 25rem;
+    height: 1.875rem;
+    border-radius: 0.3125rem;
+    margin-top: 0.3125rem;
 }
 
 input,textarea:focus{
@@ -131,12 +132,12 @@ input,textarea:focus{
 }
 
 .mail-us textarea{
-    margin-top: 5px;
+    margin-top: 0.6rem;
     font-style: normal;
     font-weight: normal;
-    font-size: 15px;
-    padding: 10px;
-    border-radius: 5px;
+    font-size: 0.9375rem;
+    padding: 0.625rem;
+    border-radius: 0.3125rem;
     border: none;
 }
 
@@ -145,12 +146,12 @@ button{
     font-family: Asap;
     font-style: normal;
     font-weight: 700;
-    font-size: 15px;
-    margin: 10px 0px 10px 580px;
-    border-radius: 10px;
+    font-size: 0.9375rem;
+    margin: 0.625rem 0px 0.625rem 40rem;
+    border-radius: 0.625rem;
     border: none;
-    width: 100px;
-    height: 40px;
+    width: 6.25rem;
+    height: 2.5rem;
     color: white;
     background-color:  #62615D;
 }
